syntax = "proto3";

package ZipBuilder;

message FirebaseSDKs {
  repeated SDK sdk = 1;
}

message SDK {
  // SDK name
  string name = 1;

  // MPM name for the blueprint
  string mpm_name = 2;

  // Public version
  string public_version = 3;

  // List of MPM patterns to build
  repeated string mpm_pattern = 4;

  // An optional list of additional blaze flags
  BlazeFlag blaze_flags = 5;

  // List of MPM patterns to build (optional nightly override)
  repeated string nightly_mpm_pattern = 6;

  // Whether or not the SDK is built from open-source
  bool open_source = 7;

  // Whether or not to strip the i386 architecture from the build
  bool strip_i386 = 8;

  // List of build targets to build the SDK - used for collecting licenses
  repeated string build_target = 9;

  // Whether or not to strip both the i386 and armv7 architectures from the
  // build
  bool strip_32bits = 10;

  // Specifies if the provided pod should be fetched from public repo.
  // Mainly use for clash testing.
  bool public_pod = 11;

  // Whether or not to use the builtin flags
  bool no_builtin_flags = 12;

  // Whether or not to build arm64e slice
  bool build_arm64e = 13;
}

message BlazeFlag {
  // An additional blaze flag needed to build the SDK
  repeated string flag = 1;
}